Closed Bug 349484 Opened 20 years ago Closed 20 years ago

Missing semicolon after decompiled import/export

Categories

(Core :: JavaScript Engine, defect, P4)

defect

Tracking

()

VERIFIED FIXED
mozilla1.8.1

People

(Reporter: jruderman, Assigned: mrbkap)

Details

(Keywords: testcase, verified1.8.1, Whiteboard: [181approval pending])

Attachments

(1 file)

In both of these cases, a semicolon is missing in decompilation, causing an error when compiling again. javascript:function() { export x; alert(5); } javascript:function() { import o.x; alert(5); }
Attached patch FixSplinter Review
rs=brendan, he says.
Assignee: general → mrbkap
Status: NEW → ASSIGNED
Attachment #234859 - Flags: review+
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
OS: Mac OS X 10.4 → All
Priority: -- → P4
Hardware: Macintosh → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8.1
Comment on attachment 234859 [details] [diff] [review] Fix Super-safe patch for the branch.
Attachment #234859 - Flags: approval1.8.1?
Checking in regress-349484.js; /cvsroot/mozilla/js/tests/js1_5/Regress/regress-349484.js,v <-- regress-349484.js initial revision: 1.1
Flags: in-testsuite+
Whiteboard: [181approval pending]
Comment on attachment 234859 [details] [diff] [review] Fix a=schrep for drivers - approving all [181approval pending] bugs now that the tree is open.
Attachment #234859 - Flags: approval1.8.1? → approval1.8.1+
Fixed on the 1.8 branch. /be
Keywords: fixed1.8.1
verified fixed 1.8, 1.9 20060824 windows/mac*/linux
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: