Add missing semicolons after import and export statements. bug 349484, r=brendan