js/src/jsopcode.c
@@ -2707,7 +2707,7 @@ Decompile(SprintStack *ss, jsbytecode *pc, intN nb)
 
 #if JS_HAS_EXPORT_IMPORT
               case JSOP_EXPORTALL:
-                js_printf(jp, "\texport *\n");
+                js_printf(jp, "\texport *;\n");
                 todo = -2;
                 break;
 
@@ -2716,19 +2716,20 @@ Decompile(SprintStack *ss, jsbytecode *pc, intN nb)
                 if (!rval)
                     return JS_FALSE;
                 RETRACT(&ss->sprinter, rval);
-                js_printf(jp, "\texport %s\n", rval);
+                js_printf(jp, "\texport %s;\n", rval);
                 todo = -2;
               END_LITOPX_CASE
 
               case JSOP_IMPORTALL:
                 lval = POP_STR();
-                js_printf(jp, "\timport %s.*\n", lval);
+                js_printf(jp, "\timport %s.*;\n", lval);
                 todo = -2;
                 break;
 
               case JSOP_IMPORTPROP:
               do_importprop:
-                GET_ATOM_QUOTE_AND_FMT("\timport %s[%s]\n", "\timport %s.%s\n",
+                GET_ATOM_QUOTE_AND_FMT("\timport %s[%s];\n",
+                                       "\timport %s.%s;\n",
                                        rval);
                 lval = POP_STR();
                 js_printf(jp, fmt, lval, rval);
@@ -2741,7 +2742,7 @@ Decompile(SprintStack *ss, jsbytecode *pc, intN nb)
                 if (js_CodeSpec[lastop].format & JOF_XMLNAME)
                     goto do_importprop;
                 lval = POP_STR();
-                js_printf(jp, "\timport %s[%s]\n", lval, xval);
+                js_printf(jp, "\timport %s[%s];\n", lval, xval);
                 todo = -2;
                 break;
 #endif /* JS_HAS_EXPORT_IMPORT */
